--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,25 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+/client/node_modules
+/client/.pnp
+/client.pnp.js
 
 # testing
-/coverage
+/client/coverage
 
 # production
 /client/build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/*/.env
+/*/.env.development
+/*/.env.local
+/*/.env.development.local
+/*/.env.test.local
+/*/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-server/.env
-client/.env.development
-client/.env
